[metadata]
name = pygame_gui_extras
version = attr: pygame_gui_extras.__version__
description = Extensions for pygame_gui
url = https://github.com/PapaMarky/pygame_gui_extras
author = Mark Dyer
author_email = heymarky@gmail.com
keywords =
  gui
  pygame
  pygame_gui
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: DIY
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: DIY
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

license_files =
  ../LICENSE

[options]
include_package_data = True
python_requires = >= 3.7
package_dir=
    =.
packages=find:
install_requires = 
    pygame_gui
[options.packages.find]
where=.
